// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a transparent main image if no file name is provided 1`] = `
<div
  className="root"
>
  <div
    className="imageContainer"
  >
    <button
      className="chevronLeft"
      onClick={[Function]}
    >
      <span
        className="root"
      >
        <svg
          fill="none"
          height={40}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={40}
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="15 18 9 12 15 6"
          />
        </svg>
      </span>
    </button>
    <img
      alt="image-product"
      className="root notLoaded"
      onError={[Function]}
      onLoad={[Function]}
      src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
    />
    <img
      alt="image-product"
      className="root"
      src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
    />
    <button
      className="chevronRight"
      onClick={[Function]}
    >
      <span
        className="root"
      >
        <svg
          fill="none"
          height={40}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={40}
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="9 18 15 12 9 6"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    className="thumbnailList"
  />
</div>
`;

exports[`renders the Carousel component correctly w/ sorted images 1`] = `
<div
  className="root"
>
  <div
    className="imageContainer"
  >
    <button
      className="chevronLeft"
      onClick={[Function]}
    >
      <span
        className="root"
      >
        <svg
          fill="none"
          height={40}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={40}
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="15 18 9 12 15 6"
          />
        </svg>
      </span>
    </button>
    <img
      alt="test-thumbnail1"
      className="root notLoaded"
      onError={[Function]}
      onLoad={[Function]}
      src="/media/catalog/product/thumbnail1.png?auto=webp&format=pjpg&width=640"
    />
    <img
      alt="test-thumbnail1"
      className="root"
      src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
    />
    <button
      className="chevronRight"
      onClick={[Function]}
    >
      <span
        className="root"
      >
        <svg
          fill="none"
          height={40}
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
          strokeWidth="2"
          viewBox="0 0 24 24"
          width={40}
          xmlns="http://www.w3.org/2000/svg"
        >
          <polyline
            points="9 18 15 12 9 6"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    className="thumbnailList"
  >
    <button
      className="rootSelected"
      onClick={[Function]}
    >
      <img
        alt="test-thumbnail1"
        className="root notLoaded"
        onError={[Function]}
        onLoad={[Function]}
        src="/media/catalog/product/thumbnail1.png?auto=webp&format=pjpg&width=240"
      />
      <img
        alt="test-thumbnail1"
        className="root"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
      />
    </button>
    <button
      className="root"
      onClick={[Function]}
    >
      <img
        alt="test-thumbnail2"
        className="root notLoaded"
        onError={[Function]}
        onLoad={[Function]}
        src="/media/catalog/product/thumbnail2.png?auto=webp&format=pjpg&width=240"
      />
      <img
        alt="test-thumbnail2"
        className="root"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
      />
    </button>
    <button
      className="root"
      onClick={[Function]}
    >
      <img
        alt="test-thumbnail3"
        className="root notLoaded"
        onError={[Function]}
        onLoad={[Function]}
        src="/media/catalog/product/thumbnail3.png?auto=webp&format=pjpg&width=240"
      />
      <img
        alt="test-thumbnail3"
        className="root"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
      />
    </button>
    <button
      className="root"
      onClick={[Function]}
    >
      <img
        alt="test-thumbnail4"
        className="root notLoaded"
        onError={[Function]}
        onLoad={[Function]}
        src="/media/catalog/product/thumbnail4.png?auto=webp&format=pjpg&width=240"
      />
      <img
        alt="test-thumbnail4"
        className="root"
        src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAFCAQAAADIpIVQAAAADklEQVR42mNkgAJGIhgAALQABsHyMOcAAAAASUVORK5CYII="
      />
    </button>
  </div>
</div>
`;
